*********************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

20th September 2008 - FreeRapid Downloader 0.61 released - bug fix release + 1 great option ;-)
  Fixed : clipboard monitoring doesn't work properly on Windows [thanks to ATom!]
  Fixed : last selected dir not saved when files were started as paused [thanks to Savannah&Lukiz!]
  Added : added option to pre-allocate file to prevent file fragmentation (Options->Preferences->Misc->Advanced)
  Changed : minor changes in megaupload, rapidshare and uploaded.to plugins
  Changed : updated readme.txt
  Changed : upgraded Substance L&F library to version 0.5 final


15th September 2008 - FreeRapid Downloader 0.6 released
  Fixed : remove selected does not select next line in the table (if filter was applied)
  Fixed : partly downloaded files were not deleted at some special cases
  Changed : SwingX library upgraded to version 0.94
  Changed : property "Max downloads at a time" does not require a restart anymore
  Changed : show/hide toolbar action has assigned new shortcut - F11
  Changed : improved internal counting of actual speed
  Changed : double click opens files if completed or opens download information dialog otherwise
  Changed : reworked enabled status of action buttons (resume, cancel, pause) - at least one active -> enabled true
  Added : option to set horizontal and/or vertical lines in table  
  Added : option to repeat error downloads indefinitely (-1 value in UserPreferences dialog)
  Added : new Misc panel in UserPreferences dialog      
  Added : multiple settings dialog (if you select more than 1 file)  
  Added : status info icon in the statusbar - clipboard monitoring (clickable)      
  Added : animated tray icon in busy state (optionable) 
  Added : clipboard monitoring (optionable)