@@ -34,7 +34,7 @@ labelLaF.text=Loo&k&Feel:
 
 ##Succesful changed
 message_changeLookAndFeelActionSet=New Look and Feel was set.\nSome changes will take effect after application restart.\nRestart is recommended.
-
+changeLookAndFeelActionFailed=Setting new Look and Feel failed.
 
 checkPlaySoundInCaseOfError.text=Play a sound in case of &error
 
@@ -78,7 +78,7 @@ labelTextFileFormat.text=text file in format [user[:password]@]host:port
 labelNoAutoreconnect.text=(0 = autoreconnect off, -1 = repeat indefinitely)
 labelIfFilenameExists.text=If a filename already &exists:
 
-labelRequiresRestart2.text=(effective on restart)
+labelRequiresRestart2.text=(application restart is recommended)
 btnOK.text=&OK
 btnProxyListPathSelect.text=text
 
