@@ -11,9 +11,11 @@ Changed - indicates a change in using/behavior FreeRapid
 Fixed - indicates a bug fix
 
 20th September 2008 - FreeRapid Downloader 0.61 released - bug fix release + 1 great option ;-)
+  Fixed : updated a few labels  
   Fixed : clipboard monitoring doesn't work properly on Windows [thanks to ATom!]
   Fixed : last selected dir not saved when files were started as paused [thanks to Savannah&Lukiz!]
   Added : added option to pre-allocate file to prevent file fragmentation (Options->Preferences->Misc->Advanced)
+  Changed : a change of Look&Feel does not require restart to apply new settings, but application restart is recommended  
   Changed : minor changes in megaupload, rapidshare and uploaded.to plugins
   Changed : updated readme.txt
   Changed : upgraded Substance L&F library to version 0.5 final
